Adds grid template

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 /* Global */
 
-body {
+.page-body {
   min-width: 960px;
   margin: 0;
   padding: 0;
@@ -24,9 +24,14 @@ body {
   color: var(--basic-white);
   text-transform: uppercase;
   background-color: var(--basic-black);
-  background-image: url("../img/bg.jpg");
+  background-image: url("img/bg.jpg");
   background-position: top center;
   background-repeat: no-repeat;
+
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -38,25 +43,58 @@ img {
   height: auto;
 }
 
+/* Grid */
+
+.page {
+  height: 100%;
+}
+
 /* Main header */
-.inner-page .main-header {
-  background-color: var(--basic-black);
+
+.main-header {
+  margin-bottom: 70px;
 }
 
 /* Main navigation */
 
 .main-navigation {
+  display: grid;
   font-size: 16px;
   line-height: 20px;
   color: var(--basic-white);
   background-color: transparent;
 }
 
-.main-navigation-wrapper {
+/* Container */
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+/* Logo */
+
+.main-header-logo {
+  order: 1;
+  justify-self: center;
+}
+
+.main-header-bar {
   background-color: var(--basic-black);
 }
 
+.main-navigation-wrapper {
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 .site-navigation {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -65,7 +103,6 @@ img {
 }
 
 /* User navigation */
-
 
 .site-navigation a,
 .user-navigation a {
@@ -79,10 +116,18 @@ img {
   background-color: var(--basic-extra-dark);
 }
 
-
 /* Features */
 
+.features {
+  margin-bottom: 80px;
+}
+
 .features-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -95,12 +140,19 @@ img {
   line-height: 42px;
 }
 
+.feature-item p {
+  margin: 0 10px;
+}
+
 /* Index columns */
 
 .index-columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 35px;
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  background-image: url("../img/pattern-light.jpg");
+  background-image: url("img/pattern-light.jpg");
   background-position: center, 0 0;
   background-repeat: no-repeat, repeat;
 }
@@ -166,124 +218,26 @@ img {
   border-color: var(--special);
 }
 
-.inner-page {
-  color: var(--basic-black);
-  background-color: var(--basic-extra-light);
-  background-image: url("../img/pattern-light.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
-}
-
-.page-title {
-  font-size: 30px;
-  line-height: 42px;
-}
-
-/* Breadcrumbs */
-
-.breadcrumbs {
-  list-style: none;
-}
-
-.breadcrumbs a {
-  color: var(--basic-black);
-}
-
-.breadcrumbs a:hover,
-.breadcrumbs a:focus {
-  text-decoration: underline;
-}
-
-.breadcrumbs-current {
-  color: var(--basic-dark);
-}
-
-/* Filters */
-
-.filter legend {
-  font-size: 24px;
-  line-height: 30px;
-}
-
-.filter ul {
-  list-style: none;
-  line-height: 18px;
-}
-
-.filter-input-checkbox:hover + label,
-.filter-input-checkbox:focus + label {
-  color: var(--special);
-}
-
-/* Catalog */
-
-.catalog-list {
-  list-style: none;
-}
-
-.catalog-item {
-  background-color: var(--basic-extra-light);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
-}
-
-.catalog-item a {
-  color: var(--basic-black);
-}
-
-.catalog-item h3 {
-  font-size: 14px;
-  line-height: 18px;
-}
-
-.catalog-category {
-  text-transform: none;
-}
-
-.catalog-item-price b {
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  background-color: var(--basic-neutralw);
-}
-
-.catalog-item-price .button {
-  line-height: 20px;
-  color: var(--basic-white);
-}
-
-/* Pagination */
-
-.pagination-list {
-  list-style: none;
-}
-
-.pagination-item a {
-  color: var(--basic-white);
-  background-color: var(--basic-black);
-}
-
-.pagination-item a:hover,
-.pagination-item a:focus,
-.pagination-item a:active {
-  background-color: var(--special);
-}
-
-.pagination-item-current a,
-.pagination-item-current a:hover,
-.pagination-item-current a:focus,
-.pagination-item-current a:active {
-  color: var(--basic-black);
-  background-color: var(--basic-white);
-}
-
 /* Main footer */
 
 .main-footer {
+  padding: 60px 0;
+  margin-top: 65px;
   color: var(--basic-white);
   background-color: var(--basic-extra-dark);
-  background-image: url("../img/pattern-dark.jpg");
+  background-image: url("img/pattern-dark.jpg");
   background-position: 0 0;
   background-repeat: repeat;
+}
+
+.main-footer .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer-contacts {
+  margin: 0;
+  width: 320px;
 }
 
 .footer-contacts a {
@@ -297,6 +251,8 @@ img {
 }
 
 .footer-social {
+  width: 145px;
+  justify-self: center;
   text-align: center;
 }
 
@@ -306,7 +262,6 @@ img {
 
 .footer-social h2 {
   font-size: 14px;
-
 }
 
 /* Social button */
@@ -320,49 +275,16 @@ img {
   background-color: var(--basic-white);
 }
 
+.footer-copyright {
+  max-width: 150px;
+  margin: 0;
+  justify-self: end;
+}
+
 .footer-copyright .button:hover,
 .footer-copyright .button:focus {
   color: var(--basic-black);
   background-color: var(--basic-white);
-}
-
-.product-photo-preview {
-  list-style: none;
-}
-
-.product-photo-preview li {
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
-}
-
-.product-photo-preview li:hover {
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
-}
-
-.product-photo-full {
-  display: block;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
-}
-
-.product-article {
-  text-align: right;
-  color: var(--basic-dark);
-}
-
-.product-price b {
-  line-height: 20px;
-  text-align: center;
-  background-color: var(--basic-neutral);
-}
-
-/* Product info */
-
-.product-info h3 {
-  font-size: 24px;
-  line-height: 30px;
-}
-
-.product-info ul {
-  list-style: none;
 }
 
 /* Modal */
@@ -370,7 +292,7 @@ img {
 .modal {
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  background-image: url("../img/pattern-light.jpg");
+  background-image: url("img/pattern-light.jpg");
   background-position: 0 0;
   background-repeat: repeat;
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
@@ -397,17 +319,16 @@ img {
 }
 
 .login-icon-user {
-  background-image: url("../img/user.svg");
+  background-image: url("img/user.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
 }
 
 .login-icon-password {
-  background-image: url("../img/lock.svg");
+  background-image: url("img/lock.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
 }
-
 
 /* Restore */
 
