--- a/style-product.css
+++ b/style-product.css
@@ -13,7 +13,7 @@
 
 /* Global */
 
-.page-body {
+body {
   min-width: 960px;
   margin: 0;
   padding: 0;
@@ -24,7 +24,7 @@
   color: var(--basic-white);
   text-transform: uppercase;
   background-color: var(--basic-black);
-  background-image: url("img/bg.jpg");
+  background-image: url("../img/bg.jpg");
   background-position: top center;
   background-repeat: no-repeat;
 }
@@ -38,186 +38,40 @@ img {
   height: auto;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-/* Grid */
-
-.page {
-  height: 100%;
-}
-
-.page-body {
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  align-content: start;
-}
-
-/* Grid for pages */
-
-.page-price {
-  display: grid;
-  align-content: start;
-}
-
-.page-price .page-title {
-  grid-column: 1 / -1;
-}
-
-.page-price .breadcrumbs {
-  grid-column: 1 / -1;
-}
-
-.page-catalog {
-  display: grid;
-  grid-template-columns: 180px 1fr;
-  align-content: start;
-}
-
-.page-catalog .page-title {
-  grid-column: 1 / -1;
-}
-
-.page-catalog .breadcrumbs {
-  grid-column: 1 / -1;
-  margin-bottom: 40px;
-}
-
-.page-product {
-  display: grid;
-  grid-template-columns: 460px 1fr;
-  align-content: start;
-}
-
-.page-product .page-title {
-  grid-column: 1 / -1;
-}
-
-.page-product .breadcrumbs {
-  grid-column: 1 / -1;
-  margin-bottom: 40px;
-}
-
 /* Main header */
 
-.main-header {
-  margin-bottom: 70px;
-}
-
 .inner-page .main-header {
-  margin-bottom: 70px;
   background-color: var(--basic-black);
 }
 
 /* Main navigation */
 
 .main-navigation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   font-size: 16px;
   line-height: 20px;
   color: var(--basic-white);
   background-color: transparent;
 }
 
-.inner-page .main-navigation {
-  align-items: flex-start;
-  flex-direction: row;
-}
-
 .main-navigation-wrapper {
-  width: 100%;
-  margin-bottom: 60px;
   background-color: var(--basic-black);
-}
-
-/* Logo */
-
-.main-header-logo {
-  order: 2;
-  width: 368px;
-  height: 153px;
-}
-
-.inner-page .main-header-logo {
-  order: 0;
-  width: 111px;
-  height: 24px;
-  padding: 23px 20px;
-}
-
-/* Container */
-
-.container {
-  width: 940px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.main-navigation .container {
-  display: flex;
-}
-
-.main-navigation-wrapper .container {
-  display: flex;
-  justify-content: space-between;
 }
 
 /* Site Navigation */
 
 .site-navigation {
-  display: flex;
-  flex-wrap: wrap;
-  width: 620px;
-  margin: 0;
-  padding: 0;
   list-style: none;
-}
-
-.site-navigation-current {
-  position: relative;
 }
 
 .site-navigation-current a:not([href]) {
   background-color: var(--basic-black);
 }
 
-.site-navigation-current::after {
-  content: "";
-  position: absolute;
-  right: 20px;
-  bottom: 0;
-  left: 20px;
-  height: 5px;
-  background-color: var(--basic-white);
-}
-
 /* User navigation */
 
-.user-navigation {
-  max-width: 140px;
-}
-
-.inner-page .user-navigation {
-  margin-left: auto;
-}
 
 .site-navigation a,
 .user-navigation a {
-  display: block;
-  padding: 25px 20px;
   color: var(--basic-white);
 }
 
@@ -228,37 +82,10 @@ img {
   background-color: var(--basic-extra-dark);
 }
 
-/* Login link */
-
-.login-link::before {
-  content: "";
-  position: absolute;
-  top: 27px;
-  left: 24px;
-  width: 16px;
-  height: 18px;
-  background-image: url("img/login.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  opacity: 0.3;
-}
-
-.login-link:hover::before,
-.login-link:focus::before,
-.login-link:active::before {
-  opacity: 1;
-}
-
-.user-navigation .login-link {
-  position: relative;
-  padding-left: 50px;
-}
 
 /* Button */
 
 .button {
-  display: inline-block;
-  margin-right: 16px;
   font: inherit;
   text-align: center;
   color: var(--basic-white);
@@ -284,52 +111,19 @@ img {
 .inner-page {
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  background-image: url("img/pattern-light.jpg");
+  background-image: url("../img/pattern-light.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
 
-.inner-page-container {
-  margin-bottom: 55px;
-}
-
 .page-title {
-  margin: 0;
-  margin-bottom: 15px;
-  padding: 0;
   font-size: 30px;
   line-height: 42px;
 }
 
 /* Breadcrumbs */
-
 .breadcrumbs {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
   list-style: none;
-}
-
-.breadcrumbs li {
-  position: relative;
-  margin-right: 42px;
-}
-
-.breadcrumbs li:last-child {
-  margin-right: 0;
-}
-
-.breadcrumbs li::after {
-  content: "";
-  position: absolute;
-  top: 7px;
-  right: -25px;
-  width: 8px;
-  height: 8px;
-  background-color: var(--basic-black);
-  transform: rotate(45deg);
 }
 
 .breadcrumbs a {
@@ -345,23 +139,13 @@ img {
   color: var(--basic-dark);
 }
 
-.breadcrumbs-current::after {
-  display: none;
-}
-
 /* Product photos */
 
 .product-photo-preview {
   list-style: none;
-  display: flex;
-  padding: 0;
-  margin: 0;
 }
 
 .product-photo-preview li {
-  width: 140px;
-  height: 149px;
-  margin-right: 20px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -369,16 +153,8 @@ img {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
 }
 
-.product-photo-preview li:nth-child(3n) {
-  margin-right: 0;
-}
-
 .product-photo-full {
   display: block;
-  width: 460px;
-  height: 498px;
-  margin: 0;
-  margin-bottom: 20px;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -391,114 +167,34 @@ img {
   line-height: 20px;
   text-align: center;
   background-color: var(--basic-neutral);
-  width: 112px;
-  padding-top: 13px;
-  padding-right: 36px;
-  padding-bottom: 11px;
-  padding-left: 36px;
-  box-sizing: border-box;
-}
-
-.product-info {
-  width: 390px;
-  padding-top: 23px;
-  padding-left: 80px;
-}
-
-.product-info p {
-  margin: 0;
-}
-
-.product-description {
-  display: flex;
-  justify-content: space-between;
-  padding-right: 10px;
-  margin-bottom: 29px;
-}
-
-.product-description p {
-  width: 200px;
-}
-
-.product-info .product-text {
-  margin-bottom: 35px;
-}
-
-.product-info .product-price {
-  display: flex;
-  margin-bottom: 63px;
-}
-
-.product-price .button {
-  padding-right: 17px;
-  padding-left: 17px;
 }
 
 /* Product info */
 
 .product-info h3 {
-  margin: 0;
-  margin-bottom: 27px;
   font-size: 24px;
   line-height: 30px;
 }
 
 .product-info ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.product-info li {
-  position: relative;
-  padding-left: 23px;
-}
-
-.product-info li::before {
-  content: "";
-  position: absolute;
-  top: 7px;
-  left: 2px;
-  width: 8px;
-  height: 8px;
-  background-color: var(--basic-black);
-  transform: rotate(45deg);
 }
 
 /* Main footer */
 
 .main-footer {
-  padding: 60px 0;
-  margin-top: 65px;
   color: var(--basic-white);
   background-color: var(--basic-extra-dark);
-  background-image: url("img/pattern-dark.jpg");
+  background-image: url("../img/pattern-dark.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
 
 .inner-page .main-footer {
-  margin-top: 45px;
-  background-image:
-    linear-gradient(to bottom, black, transparent),
-    url("img/pattern-dark.jpg");
+  background-image: url("../img/pattern-dark.jpg");
   background-size: 10px 40px, auto;
   background-position: 0 0;
   background-repeat: repeat-x, repeat;
-}
-
-.main-footer .container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.footer-contacts {
-  width: 320px;
-  margin: 0;
-}
-
-.footer-contacts p {
-  margin: 0;
 }
 
 .footer-contacts a {
@@ -512,43 +208,16 @@ img {
 }
 
 .footer-social {
-  width: 145px;
-  justify-self: center;
   text-align: center;
 }
 
 .footer-social ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 141px;
-  margin: 0 auto;
-  padding: 0;
   list-style: none;
 }
 
 .footer-social h2 {
-  margin-top: 0;
-  margin-bottom: 15px;
   font-size: 14px;
-  display: block;
-}
 
-.footer-copyright {
-  max-width: 150px;
-  margin: 0;
-  justify-self: end;
-  text-align: center;
-}
-
-.footer-copyright .button {
-  display: block;
-  margin-right: 0;
-}
-
-.footer-copyright b {
-  display: block;
-  margin-bottom: 15px;
 }
 
 .footer-copyright .button:hover,
@@ -560,12 +229,7 @@ img {
 /* Social button */
 
 .social-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 43px;
-  height: 43px;
-  background-color: var(--basic-black);
+  color: inherit;
 }
 
 .social-button:hover,
@@ -573,50 +237,26 @@ img {
   background-color: var(--basic-white);
 }
 
-.social-button:hover path,
-.social-button:focus path {
-  fill: var(--basic-black);
-}
-
 /* Modal */
 
 .modal {
-  display: none;
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  background-image: url("img/pattern-light.jpg");
+  background-image: url("../img/pattern-light.jpg");
   background-position: 0 0;
   background-repeat: repeat;
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
 .modal-login h2 {
-  margin: 0;
-  margin-bottom: 20px;
   font-size: 30px;
   line-height: 42px;
 }
 
-.modal-description {
-  margin: 0;
-  margin-bottom: 10px;
-}
-
 /* Login form */
-
-.login-form p {
-  margin: 0;
-  margin-bottom: 10px;
-}
 
 .login-form input[type="email"],
 .login-form input[type="password"] {
-  box-sizing: border-box;
-  width: 300px;
-  padding-top: 10px;
-  padding-right: 40px;
-  padding-bottom: 10px;
-  padding-left: 15px;
   font: inherit;
   color: var(--basic-black);
   text-transform: uppercase;
@@ -628,73 +268,16 @@ img {
   border-color: var(--special);
 }
 
-.login-form .login-help {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 15px 0;
-}
-
 .login-icon-user {
-  background-image: url("img/user.svg");
+  background-image: url("../img/user.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
 }
 
 .login-icon-password {
-  background-image: url("img/lock.svg");
+  background-image: url("../img/lock.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
-}
-
-.login-checkbox {
-  position: relative;
-  padding-left: 30px;
-  cursor: pointer;
-}
-
-.login-checkbox:hover,
-.login-checkbox:focus {
-  color: var(--special);
-}
-
-.login-checkbox input[type="checkbox"] + .checkbox-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 17px;
-  height: 17px;
-  border: 2px solid var(--basic-black);
-}
-
-.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator {
-  border-color: var(--special);
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
-
-.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before,
-.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 1px;
-  width: 15px;
-  height: 2px;
-  background-color: var(--basic-black);
-}
-
-.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
-  transform: rotate(45deg);
-}
-
-.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
-  transform: rotate(-45deg);
-}
-
-.login-form .button {
-  width: 100%;
-  margin-right: 0;
 }
 
 /* Restore */
@@ -707,46 +290,4 @@ img {
 .restore:hover,
 .restore:focus {
   text-decoration: none;
-}
-
-/* Animations */
-
-@keyframes bounce {
-  0% {
-    transform: translateY(-2000px);
-  }
-
-  70% {
-    transform: translateY(30px);
-  }
-
-  90% {
-    transform: translateY(-10px);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
-
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
 }
