--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 /* Global */
 
-body {
+.page-body {
   min-width: 960px;
   margin: 0;
   padding: 0;
@@ -24,9 +24,14 @@ body {
   color: var(--basic-white);
   text-transform: uppercase;
   background-color: var(--basic-black);
-  background-image: url("../img/bg.jpg");
+  background-image: url("img/bg.jpg");
   background-position: top center;
   background-repeat: no-repeat;
+
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -38,20 +43,58 @@ img {
   height: auto;
 }
 
+/* Grid */
+
+.page {
+  height: 100%;
+}
+
+/* Main header */
+
+.main-header {
+  margin-bottom: 70px;
+}
+
 /* Main navigation */
 
 .main-navigation {
+  display: grid;
   font-size: 16px;
   line-height: 20px;
   color: var(--basic-white);
   background-color: transparent;
 }
 
-.main-navigation-wrapper {
+/* Container */
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+/* Logo */
+
+.main-header-logo {
+  order: 1;
+  justify-self: center;
+}
+
+.main-header-bar {
   background-color: var(--basic-black);
 }
 
+.main-navigation-wrapper {
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
 .site-navigation {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -60,7 +103,6 @@ img {
 }
 
 /* User navigation */
-
 
 .site-navigation a,
 .user-navigation a {
@@ -74,10 +116,18 @@ img {
   background-color: var(--basic-extra-dark);
 }
 
-
 /* Features */
 
+.features {
+  margin-bottom: 80px;
+}
+
 .features-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -90,12 +140,19 @@ img {
   line-height: 42px;
 }
 
+.feature-item p {
+  margin: 0 10px;
+}
+
 /* Index columns */
 
 .index-columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 35px;
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  background-image: url("../img/pattern-light.jpg");
+  background-image: url("img/pattern-light.jpg");
   background-position: center, 0 0;
   background-repeat: no-repeat, repeat;
 }
@@ -164,11 +221,23 @@ img {
 /* Main footer */
 
 .main-footer {
+  padding: 60px 0;
+  margin-top: 65px;
   color: var(--basic-white);
   background-color: var(--basic-extra-dark);
-  background-image: url("../img/pattern-dark.jpg");
+  background-image: url("img/pattern-dark.jpg");
   background-position: 0 0;
   background-repeat: repeat;
+}
+
+.main-footer .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer-contacts {
+  margin: 0;
+  width: 320px;
 }
 
 .footer-contacts a {
@@ -182,6 +251,8 @@ img {
 }
 
 .footer-social {
+  width: 145px;
+  justify-self: center;
   text-align: center;
 }
 
@@ -191,7 +262,6 @@ img {
 
 .footer-social h2 {
   font-size: 14px;
-
 }
 
 /* Social button */
@@ -205,6 +275,12 @@ img {
   background-color: var(--basic-white);
 }
 
+.footer-copyright {
+  max-width: 150px;
+  margin: 0;
+  justify-self: end;
+}
+
 .footer-copyright .button:hover,
 .footer-copyright .button:focus {
   color: var(--basic-black);
@@ -216,7 +292,7 @@ img {
 .modal {
   color: var(--basic-black);
   background-color: var(--basic-extra-light);
-  background-image: url("../img/pattern-light.jpg");
+  background-image: url("img/pattern-light.jpg");
   background-position: 0 0;
   background-repeat: repeat;
   box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
@@ -243,17 +319,16 @@ img {
 }
 
 .login-icon-user {
-  background-image: url("../img/user.svg");
+  background-image: url("img/user.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
 }
 
 .login-icon-password {
-  background-image: url("../img/lock.svg");
+  background-image: url("img/lock.svg");
   background-position: 270px center;
   background-repeat: no-repeat;
 }
-
 
 /* Restore */
 
